# ollama_chat

./: .gitignore  README.md  Start.txt
chat_api/history_unprocessed/: chat_history.20241218_01.41.27.txt  chat_history.20241218_01.44.39.txt  chat_history.20241218_02.14.56.txt  chat_history.20241219_15.30.23.txt  chat_history.20241219_15.44.27.txt  chat_history.20241219_16.23.22.txt  chat_history.20241219_16.30.43.txt  chat_history.20241219_16.33.28.txt  chat_history.20241219_16.50.55.txt  chat_history.20241219_17.03.03.txt  chat_history.20241219_17.11.09.txt  chat_history.20241219_17.17.23.txt  chat_history.20241219_17.21.11.txt  chat_history.20241219_17.22.51.txt  chat_history.20241219_17.25.45.txt  chat_history.20241219_17.29.58.txt  chat_history.20241219_17.32.23.txt  chat_history.20241219_17.43.41.txt  chat_history.20241219_17.44.24.txt  chat_history.20241219_17.47.46.txt  chat_history.20241219_17.48.33.txt  chat_history.20241219_17.57.39.txt  chat_history.20241219_18.07.06.txt  chat_history.20241219_18.21.23.txt  chat_history.20241219_18.28.07.txt  chat_history.20241219_18.31.31.txt  chat_history.20241219_18.40.00.txt  chat_history.20241219_18.45.13.txt  chat_history.20241219_18.48.26.txt  chat_history.20241219_18.53.19.txt  chat_history.20241219_18.54.41.txt  chat_history.20241219_19.08.35.txt  chat_history.20241219_19.23.22.txt  chat_history.20241219_19.24.18.txt  chat_history.20241219_19.33.15.txt  chat_history.20241219_19.34.35.txt  chat_history.20241219_19.37.28.txt  chat_history.20241219_19.46.00.txt  chat_history.20241219_19.48.13.txt  chat_history.20241219_19.57.52.txt  (+61 more)
chat_api/memory_files/: conversation_closing_previous.txt  maintenance_mode_introduction.txt
python/: clear_database.py  context.py  generate_request.py  generate_request_2.py  generate_request_3.py  generate_request_4.py  generate_request_5.py  import_sp.py  list_database.py  script.py  search.py  search_docs_only.py  search_docs_only_cos.py  test.py  test_2.py  utilities.py
scripts/: ol.sh  rag.sh
source/: CMakeLists copy.txt  CMakeLists.txt  changelog.txt  chromadb_api.cpp  chromadb_api.h  definitions.h  fled_time.cpp  fled_time.h  helper.cpp  helper.h  main.cpp  main.h  ollama_api.cpp  ollama_api.h  ollama_api_python.cpp  ollama_api_python.h  ollama_helper.cpp  ollama_helper.h  rasapi.cpp  rasapi.h  remember.cpp  remember.h  stringthings.cpp  stringthings.h  system.cpp  system.h  thought_stages.cpp  thought_stages.h  thought_variables.cpp  thought_variables.h  thoughts.cpp  thoughts.h  threading.cpp  threading.h  tool_functions.cpp  tool_functions.h  tty_io.cpp  tty_io.h  vectordb_api.cpp  vectordb_api.h  (+2 more)
